A/src/test.java
/* Generated By:JavaCC: Do not edit this line. test.java */
import nodes.*;
public class test implements testConstants {
public static void main (String [] args)
{
try{
test parser = new test(System.in);
treeNode n = parser.start();
n.execute();
}
catch(Exception e){System.out.print(e.getMessage());}
}

  static void error_skipto(int kind) throws ParseException {
 ParseException e = generateParseException(); // generate the exception object. 
System.out.println("error"); // print the error message 
Token t;
do { t = getNextToken(); } while (t.kind != kind);
  }

  static final public treeNode start() throws ParseException {
  stringNode s;
blockNode w;
ExeFunc ew;
FuncNode f;
CheckFun c;
assignNode a;
    w = EveryThing();
 {if (true) return w;}
    throw new Error("Missing return statement in function");
  }

  static final public ExeFunc FunEx() throws ParseException {
 ExeFunc e;
 CheckFun c;
 Token t1;
    t1 = jj_consume_token(CHAR);
        c=new CheckFun(t1.toString());
        e=new ExeFunc(c);
        {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public FuncNode FuncSt() throws ParseException {
  FuncNode f;
  stringNode w1,w2;
  Token t1,t2;
  blockNode b;
        String q="";
    jj_consume_token(FUNCTION);
    t1 = jj_consume_token(CHAR);
    jj_consume_token(OPEN1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    t2 = jj_consume_token(CHAR);
                                    q+=t2.toString();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(34);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case STRING:
        jj_consume_token(STRING);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = jj_consume_token(CHAR);
                                          q+=","+t2.toString();
    }
    jj_consume_token(C2);
    jj_consume_token(OPEN);
    b = EveryThing();
    jj_consume_token(C1);
  w1=new stringNode(t1.toString());
w2=new stringNode(q.toString());
f=new FuncNode (w1,w2,b);
     {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public blockNode EveryThing() throws ParseException {
  treeNode n;
blockNode w=new blockNode();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SWITCH:
        n = SwitchSt();
        break;
      case STRING:
      case INT:
        n = AssingSt();
        break;
      case CHAR:
        n = IncSt();
        break;
      case WHILE:
        n = WhileSt();
        break;
      case DO:
        n = doWhileSt();
        break;
      case IF:
        n = IfSt();
        break;
      case CW:
        n = print();
        break;
      case FOR:
        n = ForSt();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
           w.addChild(n);
      if (jj_2_1(5)) {
        ;
      } else {
        break label_2;
      }
    }
  {if (true) return w;}
    throw new Error("Missing return statement in function");
  }

  static final public SwitchNode SwitchSt() throws ParseException {
  SwitchNode s=new SwitchNode();
        ChechVal ss;
        stringNode str;
        constNode v2;
        blockNode b=new blockNode();
        stNode st=new stNode();
        Token t1,t2,t4=null;
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(OPEN1);
      t1 = jj_consume_token(CHAR);
      jj_consume_token(C2);
ss=new ChechVal(t1.toString());
   s.addChild(ss);
      jj_consume_token(OPEN);
      if (jj_2_2(2)) {
        label_3:
        while (true) {
          jj_consume_token(CASE);
          t2 = jj_consume_token(CHAR);
          jj_consume_token(DOTS);
          b = EveryThing();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BREAK:
            jj_consume_token(BREAK);
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CASE:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
        }
        ss=new ChechVal(t1.toString());
        str=new stringNode(t2.toString());
        s.addChild(ss);
        s.addChild(str);
        s.addChild(b);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
          label_4:
          while (true) {
            jj_consume_token(CASE);
            t2 = jj_consume_token(DOUBLE);
            jj_consume_token(DOTS);
            b = EveryThing();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BREAK:
              jj_consume_token(BREAK);
              break;
            default:
              jj_la1[6] = jj_gen;
              ;
            }
        v2=new constNode(t2.image);

        s.addChild(v2);
        s.addChild(b);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case CASE:
              ;
              break;
            default:
              jj_la1[7] = jj_gen;
              break label_4;
            }
          }
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(C1);
    } catch (ParseException e) {
     error_skipto(C1);
    } finally {
      {if (true) return s;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ForNode ForSt() throws ParseException {
  ForNode f=new ForNode();
  assignNode a;
  ChechVal c;
  constNode cc;
  modificationNode m;
  stringNode ss;
  blockNode b=new blockNode();
  stNode s;
  Token t1,t2,t3;
    try {
      jj_consume_token(FOR);
      jj_consume_token(OPEN1);
      a = AssingSt();
      t1 = jj_consume_token(CHAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BIG:
        t3 = jj_consume_token(BIG);
        break;
      case SMALL:
        t3 = jj_consume_token(SMALL);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = jj_consume_token(DOUBLE);
      jj_consume_token(END);
      m = IncSt1();
      jj_consume_token(C2);
      jj_consume_token(OPEN);
      b = EveryThing();
      jj_consume_token(C1);
        a.execute();
        c=new ChechVal(t1.toString());
        cc=new constNode(t2.image);

        ss=new stringNode(t3.toString());
        f.addChild(c);
        f.addChild(cc);
        f.addChild(b);
        f.addChild(ss);
    } catch (ParseException e) {
     error_skipto(C1);
    } finally {
     {if (true) return f;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public doWhileNode doWhileSt() throws ParseException {
  doWhileNode d=new doWhileNode();
  stNode s=new stNode();
  blockNode b=new blockNode();
  condWhile w;
    try {
      jj_consume_token(DO);
      jj_consume_token(OPEN);
      b = EveryThing();
      jj_consume_token(C1);
      jj_consume_token(OPEN1);
      jj_consume_token(WHILE);
      w = condW();
      jj_consume_token(C2);
      jj_consume_token(END);
    d.addChild(b);
        d.addChild(w);
    } catch (ParseException e) {
     error_skipto(END);
    } finally {
    {if (true) return d;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public WhileNode WhileSt() throws ParseException {
  WhileNode w=new WhileNode();
  condWhile c;
  stNode s;
  blockNode b=new blockNode();
    try {
      jj_consume_token(WHILE);
      c = condW();
      jj_consume_token(OPEN);
      b = EveryThing();
      jj_consume_token(C1);
        w.addChild(c);
        w.addChild(b);
    } catch (ParseException e) {
     error_skipto(C1);
    } finally {
     {if (true) return w;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public condWhile condW() throws ParseException {
condWhile c=new condWhile();
  constNode v2;

ChechVal v1,vv2;
stringNode v3;
Token t1,t2,t3;
    try {
      jj_consume_token(OPEN1);
      if (jj_2_3(3)) {
        t1 = jj_consume_token(CHAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTEQU:
          t3 = jj_consume_token(NOTEQU);
          break;
        case EQUEQU:
          t3 = jj_consume_token(EQUEQU);
          break;
        case BIG:
          t3 = jj_consume_token(BIG);
          break;
        case SMALL:
          t3 = jj_consume_token(SMALL);
          break;
        case SMALLEQU:
          t3 = jj_consume_token(SMALLEQU);
          break;
        case BIGEQU:
          t3 = jj_consume_token(BIGEQU);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = jj_consume_token(DOUBLE);
   v1=new ChechVal(t1.toString());
   v2 = new constNode(t2.image);
   v3=new stringNode(t3.toString());
  c.addChild(v1);
  c.addChild(v2);
  c.addChild(v3);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHAR:
          t1 = jj_consume_token(CHAR);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOTEQU:
            t3 = jj_consume_token(NOTEQU);
            break;
          case EQUEQU:
            t3 = jj_consume_token(EQUEQU);
            break;
          case BIG:
            t3 = jj_consume_token(BIG);
            break;
          case SMALL:
            t3 = jj_consume_token(SMALL);
            break;
          case SMALLEQU:
            t3 = jj_consume_token(SMALLEQU);
            break;
          case BIGEQU:
            t3 = jj_consume_token(BIGEQU);
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          t2 = jj_consume_token(CHAR);
   v1=new ChechVal(t1.toString());
   vv2 = new ChechVal(t2.toString());
   v3=new stringNode(t3.toString());
  c.addChild(v1);
  c.addChild(vv2);
  c.addChild(v3);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(C2);
    } catch (ParseException e) {
     error_skipto(C2);
    } finally {
    {if (true) return c;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ifNode IfSt() throws ParseException {
  ifNode a=new ifNode();
  condNode c;
  blockNode b=new blockNode();
  stNode s;
    try {
      jj_consume_token(IF);
      c = cond();
      jj_consume_token(OPEN);
      b = EveryThing();
      jj_consume_token(C1);
        a.addChild(c);
        a.addChild(b);
    } catch (ParseException e) {
     error_skipto(C1);
    } finally {
    {if (true) return a;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public condNode cond() throws ParseException {
condNode c = new condNode();
constNode v2;
ChechVal v1,vv2;
stringNode v3;
Token t1,t2,t3;
    try {
      jj_consume_token(OPEN1);
      if (jj_2_4(3)) {
        t1 = jj_consume_token(CHAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTEQU:
          t3 = jj_consume_token(NOTEQU);
          break;
        case EQUEQU:
          t3 = jj_consume_token(EQUEQU);
          break;
        case BIG:
          t3 = jj_consume_token(BIG);
          break;
        case SMALL:
          t3 = jj_consume_token(SMALL);
          break;
        case SMALLEQU:
          t3 = jj_consume_token(SMALLEQU);
          break;
        case BIGEQU:
          t3 = jj_consume_token(BIGEQU);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = jj_consume_token(DOUBLE);
   v1=new ChechVal(t1.toString());
   v2 = new constNode(t2.image);
   v3=new stringNode(t3.toString());
  c.addChild(v1);
  c.addChild(v2);
  c.addChild(v3);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHAR:
          t1 = jj_consume_token(CHAR);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOTEQU:
            t3 = jj_consume_token(NOTEQU);
            break;
          case EQUEQU:
            t3 = jj_consume_token(EQUEQU);
            break;
          case BIG:
            t3 = jj_consume_token(BIG);
            break;
          case SMALL:
            t3 = jj_consume_token(SMALL);
            break;
          case SMALLEQU:
            t3 = jj_consume_token(SMALLEQU);
            break;
          case BIGEQU:
            t3 = jj_consume_token(BIGEQU);
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          t2 = jj_consume_token(CHAR);
   v1=new ChechVal(t1.toString());
   vv2 = new ChechVal(t2.toString());
   v3=new stringNode(t3.toString());
  c.addChild(v1);
  c.addChild(vv2);
  c.addChild(v3);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(C2);
    } catch (ParseException e) {
     error_skipto(C2);
    } finally {
    {if (true) return c;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public modificationNode IncSt() throws ParseException {
        modificationNode m=new modificationNode();
        assignNode aa;
        stringNode s1;
  stringNode s2;
  constNode con;
  Token t,t2,t3=null;
    try {
      t = jj_consume_token(CHAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
        t2 = jj_consume_token(35);
        break;
      case 36:
        t2 = jj_consume_token(36);
        break;
      case 37:
        t2 = jj_consume_token(37);
        t3 = jj_consume_token(DOUBLE);
        break;
      case 38:
        t2 = jj_consume_token(38);
        t3 = jj_consume_token(DOUBLE);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(END);
    s1=new stringNode(t.toString());
    s2=new stringNode(t2.toString());
    m.addChild(s1);
    m.addChild(s2);
if(t3 !=null){  con=new constNode(t3.image);m.addChild(con); }
    } catch (ParseException e) {
     error_skipto(END);
    } finally {
     {if (true) return m;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public modificationNode IncSt1() throws ParseException {
        modificationNode m=new modificationNode();
        assignNode aa;
  stringNode s1;
  stringNode s2;
  constNode con;
  Token t,t2,t3=null;
    t = jj_consume_token(CHAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      t2 = jj_consume_token(35);
      break;
    case 36:
      t2 = jj_consume_token(36);
      break;
    case 37:
      t2 = jj_consume_token(37);
      t3 = jj_consume_token(DOUBLE);
      break;
    case 38:
      t2 = jj_consume_token(38);
      t3 = jj_consume_token(DOUBLE);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    s1=new stringNode(t.toString());
    s2=new stringNode(t2.toString());
    m.addChild(s1);
    m.addChild(s2);
if(t3 !=null){  con=new constNode(t3.image);m.addChild(con); }
    {if (true) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public assignNode AssingSt() throws ParseException {
  assignNode a=new assignNode();
  stringNode s,s1,s3;
  constNode c;
  Token t1,t2,t3=null,t4=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t1 = jj_consume_token(INT);
        t2 = jj_consume_token(CHAR);
        jj_consume_token(EQU);
        t3 = jj_consume_token(DOUBLE);
        jj_consume_token(END);
        s1=new stringNode(t1.toString());
        s=new stringNode(t2.toString());
        c=new constNode(t3.toString());
        a.addChild(s1);
        a.addChild(s);
        a.addChild(c);
        break;
      case STRING:
        t1 = jj_consume_token(STRING);
        t2 = jj_consume_token(CHAR);
        jj_consume_token(EQU);
        jj_consume_token(QUT);
        t4 = jj_consume_token(CHAR);
        jj_consume_token(QUT);
        jj_consume_token(END);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        s1=new stringNode(t1.toString());
        s=new stringNode(t2.toString());
        s3=new stringNode(t4.toString());
        a.addChild(s1);
        a.addChild(s);
        a.addChild(s3);
    } catch (ParseException e) {
     error_skipto(END);
    } finally {
     {if (true) return a;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public stNode print() throws ParseException {
  stNode s=new stNode();
  ChechVal c;
  Print st;
  Token t,t2;
  stringNode ww;
  String q="";
    try {
      jj_consume_token(CW);
      jj_consume_token(OPEN1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
        t = jj_consume_token(CHAR);
        jj_consume_token(C2);
 c=new ChechVal(t.toString());
        s.addChild(c);
        break;
      case QUT:
        jj_consume_token(QUT);
        label_5:
        while (true) {
          t = jj_consume_token(CHAR);
                       st=new Print(t.toString());  q+=t.toString()+" ";
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CHAR:
            ;
            break;
          default:
            jj_la1[19] = jj_gen;
            break label_5;
          }
        }
        jj_consume_token(QUT);
        jj_consume_token(C2);
                                                                                         ww=new stringNode(q); s.addChild(ww);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(END);
    } catch (ParseException e) {
     error_skipto(END);
    } finally {
{if (true) return s;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public stringNode StringSt() throws ParseException {
  stringNode s;
  Token t;
    t = jj_consume_token(CHAR);
               s=new stringNode(t.toString());
                                                  {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(QUT)) return true;
    Token xsp;
    if (jj_3R_34()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_34()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(QUT)) return true;
    return false;
  }

  static private boolean jj_3R_33() {
    if (jj_scan_token(CHAR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(16)) return true;
    }
    }
    }
    }
    }
    if (jj_scan_token(CHAR)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(CHAR)) return true;
    if (jj_scan_token(EQU)) return true;
    if (jj_scan_token(DOUBLE)) return true;
    if (jj_scan_token(END)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(CHAR)) return true;
    if (jj_scan_token(C2)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(CW)) return true;
    if (jj_scan_token(OPEN1)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) return true;
    }
    if (jj_scan_token(END)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
